tests/explicit-nulls/neg/strict-equality.scala
import scala.language.strictEquality
val x: Int = 42
val _ = x == null // error
